# plumber

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ruff.yml
data/: .gitkeep
docs/: README.md  api.md  index.md
examples/: .gitkeep
scripts/: .gitkeep
src/plumber/: __init__.py
tests/: .gitkeep
